--- a/style.css
+++ b/style.css
@@ -109,28 +109,49 @@
   }
   
   .googlesearch {
+    height: 36px;
     margin: 11px 4px;
+    margin-top: 30px;
     padding: 0 16px;
     line-height: 27px;
     min-width: 54px;
     text-align: center;
     cursor: pointer;
     user-select: none;
+    border-radius: 4px;
+    color: #5f6368;
+    border: none;
+    font-family: Arial;
+    font-size: 14px;
+    background-color: #f2f2f2;
+    
+  }
+  .googlesearch:hover{
+    border: 1px solid #f2f2f2 ;
+
   }
   .buttons{
     text-align: center;
-    border-color:  #f2f2f2;
-    border: 1px;
-
   }
  
   .feelinglucky {
+    height: 36px;
     padding: 0 16px;
     line-height: 27px;
     min-width: 54px;
     text-align: center;
     cursor: pointer;
     user-select: none;
+    border: none;
+    border-radius: 4px;
+    color: #5f6368;
+    font-family: Arial;
+    font-size: 14px;
+    background-color: #f2f2f2;
+  
+  }
+  .feelinglucky:hover{
+    border: 1px solid #f2f2f2 ;
   }
   
   .footer {
